--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <webedi.nacos.version>2021.1</webedi.nacos.version>
         <webedi.discovery.version>2021.1</webedi.discovery.version>
         <webedi.mysql.version>5.1.49</webedi.mysql.version>
+        <mssql-connector-java.version>7.4.1.jre8</mssql-connector-java.version>
         <webedi.pagehelper.version>1.4.1</webedi.pagehelper.version>
         <webedi.springdoc.version>1.6.5</webedi.springdoc.version>
         <webedi.commons-lang3.version>3.12.0</webedi.commons-lang3.version>
@@ -78,6 +79,11 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${webedi.mysql.version}</version>
             </dependency>
+            <dependency>
+	            <groupId>com.microsoft.sqlserver</groupId>
+	            <artifactId>mssql-jdbc</artifactId>
+	            <version>${mssql-connector-java.version}</version>
+	        </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
